unpackaged/main/default/objects/Account/fields/DemoTest1__c.field-meta.xml
<CustomField>
    <fullName>DemoTest1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoTest1</label>
    <type>Checkbox</type>
</CustomField>