unpackaged/main/default/objects/Account/fields/DemoTest__c.field-meta.xml
<CustomField>
    <fullName>DemoTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoTest</label>
    <type>Checkbox</type>
</CustomField>