unpackaged/main/default/objects/Account/fields/Green_Account__c.field-meta.xml
<CustomField>
    <fullName>Green_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Green Account</label>
    <type>Checkbox</type>
</CustomField>