unpackaged/main/default/objects/Account/fields/TryAgain__c.field-meta.xml
<CustomField>
    <fullName>TryAgain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TryAgain</label>
    <type>Checkbox</type>
</CustomField>