unpackaged/main/default/objects/Account/validationRules/Description_Mandate.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Mandate</fullName>
    <active>true</active>
    <errorConditionFormula>Description &lt;&gt; null</errorConditionFormula>
    <errorMessage>Description field needs to be populated</errorMessage>
</ValidationRule>